// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemberOptionsMenu for me, as owner renders correctly 1`] = `
<Translate(PopupMenu)
  actions={
    Array [
      Object {
        "onPress": [Function],
        "text": "Leave Community",
      },
    ]
  }
  iconProps={Object {}}
/>
`;

exports[`MemberOptionsMenu renders for admin looking at admin 1`] = `
<Translate(PopupMenu)
  actions={
    Array [
      Object {
        "onPress": [Function],
        "text": "Remove Admin",
      },
      Object {
        "onPress": [Function],
        "text": "Remove Member",
      },
    ]
  }
  iconProps={Object {}}
/>
`;

exports[`MemberOptionsMenu renders for admin looking at member 1`] = `
<Translate(PopupMenu)
  actions={
    Array [
      Object {
        "onPress": [Function],
        "text": "Make Admin",
      },
      Object {
        "onPress": [Function],
        "text": "Remove Member",
      },
    ]
  }
  iconProps={Object {}}
/>
`;

exports[`MemberOptionsMenu renders for owner looking at admin 1`] = `
<Translate(PopupMenu)
  actions={
    Array [
      Object {
        "onPress": [Function],
        "text": "Remove Admin",
      },
      Object {
        "onPress": [Function],
        "text": "Make Owner",
      },
      Object {
        "onPress": [Function],
        "text": "Remove Member",
      },
    ]
  }
  iconProps={Object {}}
/>
`;

exports[`MemberOptionsMenu renders for owner looking at member 1`] = `
<Translate(PopupMenu)
  actions={
    Array [
      Object {
        "onPress": [Function],
        "text": "Make Admin",
      },
      Object {
        "onPress": [Function],
        "text": "Make Owner",
      },
      Object {
        "onPress": [Function],
        "text": "Remove Member",
      },
    ]
  }
  iconProps={Object {}}
/>
`;
